torrent-stack/qbittorrent/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent-vpn
  namespace: torrent-stack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: qbittorrent-vpn
  template:
    metadata:
      labels:
        app: qbittorrent-vpn
    spec:
      containers:
        - name: gluetun
          image: qmcgaw/gluetun
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - containerPort: 8112
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: downloads
              mountPath: /media_drive

      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: downloads
          persistentVolumeClaim:
            claimName: qbittorrent-samba-pvc
