torrent-stack/qbittorrent/manifests/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: qbittorrent-service
#   namespace: torrent-stack
# spec:
#   selector:
#     app: qbittorrent-vpn  # This must match the label in the Deployment
#   ports:
#     - protocol: TCP
#       port: 8112
#       targetPort: 8112
#   type: ClusterIP

apiVersion: v1
kind: Service
metadata:
  name: qbittorrent-service
  namespace: torrent-stack
spec:
  type: ClusterIP
  selector:
    app: qbittorrent-vpn
  ports:
    - protocol: TCP
      port: 8112
      targetPort: 8112
      # nodePort: 30000  # Change this to a port number available in your range
