torrent-stack/qbittorrent/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent-ingress
  namespace: torrent-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: qbittorrent.rancher-dev.branconet.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gluetun-service
                port:
                  number: 8112
